<resources>
    <string name="app_name">SmartOffice</string>
    <string name="tagline">We only deliver good service. Start now!</string>
    <string name="nav_home">Home</string>
    <string name="nav_control">Control</string>
    <string name="nav_camera">Camera</string>
    <string name="nav_notification">Notification</string>
    <string name="nav_setting">Setting</string>

    <string name="general">General</string>
    <string name="mcu">MCU</string>
    <string name="sensor">Sensor</string>
    <string name="yolo_uno_1">Yolo Uno 1</string>
    <string name="yolo_uno_2">Yolo Uno 2</string>
    <string name="dht20">DHT20</string>
    <string name="light_sensor">Light Sensor</string>
    <string name="sensor_description">Temperature and humidity sensor</string>
    <string name="control">Control</string>
    <string name="camera">Camera</string>
    <string name="notification">Notification</string>
    <string name="office_room">Office room</string>
    <string name="room_1">Room 1</string>
    <string name="room_2">Room 2</string>
    <string name="living_room">Living room</string>
    <string name="bedroom">Bedroom</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="rooms">Rooms</string>
    <string name="room_description">Smart room control</string>
    <string name="settings">Settings</string>
    <string name="status_bar">Status Bar</string>
    <string name="header">Header</string>
    <string name="content">Content</string>
    <string name="nav_bar">Navigation Bar</string>
    <string name="menu">Menu</string>
    <string name="notifications">Notifications</string>
    <string name="wifi">Wi-Fi</string>
    <string name="battery">Battery</string>
    <string name="turn_on">Turn On</string>
    <string name="turn_off">Turn Off</string>
    <string name="active_devices">Active devices</string>
    <string name="sensor_title">Sensors</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="temperature_value_default">25.0 °C</string>
    <string name="humidity_value_default">60.0 %</string>
    <string name="temperature_icon_desc">Temperature icon</string>
    <string name="humidity_icon_desc">Humidity icon</string>
    <string name="back_button_desc">Back</string>
    <string name="profile_icon_desc">Profile</string>
    <string name="add_device_desc">Add device</string>
    <string name="device_icon_desc">Device icon</string>
    <string name="device_name_default">Device</string>
    <string name="device_status_off">Off</string>
    <string name="header_title_control">Control</string>
    <string name="header_subtitle">We only deliver good service. Start now!</string>
    <string name="mode_control_title">Mode Control</string>
    <string name="mode_manual">Manual</string>
    <string name="mode_auto">Auto</string>
    <string name="mode_disabled">Disabled</string>
    <string name="mode_manual_desc">Manual mode: Toggle actuators on/off manually</string>
    <string name="status_format">Status: %s</string>
    <string name="sensor_data_format">Sensor Data: %s</string>
    <string name="room_bedroom">Bedroom</string>
    <string name="room_living_room">Living Room</string>
    <string name="room_kitchen">Kitchen</string>
    <string name="room_bathroom">Bathroom</string>
    <string name="mode_auto_desc">Auto mode: Actuators activate based on sensor thresholds</string>
    <string name="mode_disabled_desc">Disabled mode: All actuators are turned off</string>
    <string name="device_turned_on">%1$s turned on</string>
    <string name="device_turned_off">%1$s turned off</string>
    <string name="device_auto_turned_on">[AUTO] %1$s turned on</string>
    <string name="device_auto_turned_off">[AUTO] %1$s turned off</string>
    <string name="add_device_coming_soon">Add actuator feature will be implemented</string>
    <string name="thresholds_saved">Thresholds saved</string>
    <string name="already_on_control">Already on Control screen</string>
    <string name="camera_coming_soon">Camera screen will be implemented</string>
    <string name="notifications_coming_soon">Notifications screen will be implemented</string>
    <string name="settings_coming_soon">Settings screen will be implemented</string>
    <string name="actuators">Actuators</string>
    <string name="devices">Devices</string>
    <string name="all_devices_disabled">All actuators disabled</string>
    <string name="coming_soon">Coming soon...</string>
    <string name="all">All</string>
    <string name="read">Read</string>
    <string name="unread">Unread</string>
    <string name="mark_all_read">Mark all as read</string>
    <string name="mark_all_unread">Mark all as unread</string>
    <string name="delete_all">DELETE ALL</string>

    <!-- Mode options for actuator control -->
    <string-array name="actuator_modes">
        <item>Manual</item>
        <item>Auto</item>
        <item>Schedule</item>
    </string-array>
</resources>