<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Green header with profile icon -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="#2FCB57"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/general"
                android:textColor="#FFFFFF"
                android:textSize="36sp"
                android:textStyle="bold"
                android:layout_alignParentBottom="true" />

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:contentDescription="Profile"
                android:src="@drawable/ic_pfp" />

        </RelativeLayout>

        <!-- Black content area -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="24dp"
            android:paddingBottom="24dp">

            <!-- MCU Title -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mcu"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginBottom="14dp" />

            <!-- MCU Card -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="#1C1C1E"
                android:layout_marginBottom="98dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Yolo Uno 1 -->
                    <RelativeLayout
                        android:id="@+id/yolo_uno_1_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="24dp"
                        android:paddingBottom="24dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="?android:attr/selectableItemBackground">



                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/yolo_uno_1"
                            android:textColor="#FFFFFF"
                            android:textSize="14sp"
                            android:layout_centerVertical="true" />

                        <ImageView
                            android:id="@+id/status_yolo_uno_1"
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_toLeftOf="@id/info_yolo_uno_1"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="20dp"
                            android:src="@drawable/ic_select"
                            android:visibility="visible"
                            app:tint="#0000FF" />

                        <ImageView
                            android:id="@+id/info_yolo_uno_1"
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_info" />
                    </RelativeLayout>

                    <!-- Divider -->
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#353537" />

                    <!-- Yolo Uno 2 -->
                    <RelativeLayout
                        android:id="@+id/yolo_uno_2_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="24dp"
                        android:paddingBottom="24dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="?android:attr/selectableItemBackground">



                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/yolo_uno_2"
                            android:textColor="#FFFFFF"
                            android:textSize="14sp"
                            android:layout_centerVertical="true" />

                        <ImageView
                            android:id="@+id/status_yolo_uno_2"
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_toLeftOf="@id/info_yolo_uno_2"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="20dp"
                            android:src="@drawable/ic_select"
                            android:visibility="invisible"
                            app:tint="#0000FF" />

                        <ImageView
                            android:id="@+id/info_yolo_uno_2"
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_info" />
                    </RelativeLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Sensor Title with Add Button -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp">
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sensor"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_centerVertical="true" />
                
                <ImageButton
                    android:id="@+id/add_sensor_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="Add sensor"
                    android:src="@drawable/ic_add" />
            </RelativeLayout>

            <!-- Sensor Cards Container -->
            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                
                <LinearLayout
                    android:id="@+id/sensor_cards_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    
                    <!-- Initial Sensor Row -->
                    <LinearLayout
                        android:id="@+id/initial_sensor_row"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2"
                        android:layout_marginBottom="20dp">

                        <!-- DHT20 Card -->
                        <androidx.cardview.widget.CardView
                            android:id="@+id/dht20_card"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_marginEnd="20dp"
                            app:cardCornerRadius="20dp"
                            app:cardBackgroundColor="#1C1C1E">

                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">
                                
                                <LinearLayout
                                    android:id="@+id/dht20_container"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical"
                                    android:gravity="center"
                                    android:padding="1dp">

                                    <ImageView
                                        android:id="@+id/dht20_image"
                                        android:layout_width="1dp"
                                        android:layout_height="1dp"
                                        android:src="@drawable/ic_temperature"
                                        android:layout_marginBottom="1dp" />

                                    <TextView
                                        android:id="@+id/dht20_title"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:text="@string/dht20"
                                        android:textColor="#FFFFFF"
                                        android:textSize="20sp"
                                        android:textStyle="bold"
                                        android:layout_marginBottom="1dp" />

                                    <TextView
                                        android:id="@+id/dht20_description"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/sensor_description"
                                        android:textColor="#919193"
                                        android:textSize="14sp"
                                        android:gravity="center" />
                                </LinearLayout>
                                
                                <ImageButton
                                    android:id="@+id/remove_dht20_button"
                                    android:layout_width="24dp"
                                    android:layout_height="24dp"
                                    android:layout_gravity="top|end"
                                    android:layout_margin="8dp"
                                    android:background="@android:color/transparent"
                                    android:contentDescription="Remove sensor"
                                    android:src="@drawable/ic_remove" />
                            </FrameLayout>
                        </androidx.cardview.widget.CardView>

                        <!-- Light Sensor Card -->
                        <androidx.cardview.widget.CardView
                            android:id="@+id/light_card"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            app:cardCornerRadius="20dp"
                            app:cardBackgroundColor="#1C1C1E">

                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">
                                
                                <LinearLayout
                                    android:id="@+id/light_container"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical"
                                    android:gravity="center"
                                    android:padding="1dp">

                                    <ImageView
                                        android:id="@+id/light_image"
                                        android:layout_width="1dp"
                                        android:layout_height="1dp"
                                        android:src="@drawable/ic_light"
                                        android:layout_marginBottom="1dp" />

                                    <TextView
                                        android:id="@+id/light_title"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:text="@string/light_sensor"
                                        android:textColor="#FFFFFF"
                                        android:textSize="20sp"
                                        android:textStyle="bold"
                                        android:layout_marginBottom="1dp" />

                                    <TextView
                                        android:id="@+id/light_description"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/sensor_description"
                                        android:textColor="#919193"
                                        android:textSize="14sp"
                                        android:gravity="center" />
                                </LinearLayout>
                                
                                <ImageButton
                                    android:id="@+id/remove_light_button"
                                    android:layout_width="24dp"
                                    android:layout_height="24dp"
                                    android:layout_gravity="top|end"
                                    android:layout_margin="8dp"
                                    android:background="@android:color/transparent"
                                    android:contentDescription="Remove sensor"
                                    android:src="@drawable/ic_remove" />
                            </FrameLayout>
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout> 